--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -42,8 +42,8 @@
 												const count = json.resourse.count;
 												const flag = json.resourse.flag;
 												const postimageFavoriteId = json.resourse.postimageFavoriteId;
-												const postId = json.resourse.postImage.post.post_id;
-												const userName = json.resourse.postImage.post.user.userName;
+												const postId = json.resourse.post.postId;
+												const userName = json.resourse.user.userName;
 												let text = "";
 
 												if (flag) {
