--- a/src/main/resources/templates/post/postDetail.html
+++ b/src/main/resources/templates/post/postDetail.html
@@ -42,7 +42,7 @@
 		$('.deletePost').click(function(e) {
 			const deleteImageFalg = confirm('この投稿を削除してもよろしいですか？');
 			if (deleteImageFalg) {
-				const post_id = $(this).next().val();
+				const postId = $(this).next().val();
 				const zoo_id = $(this).next().next().val();
 				const csrf = $(this).next().next().next().val();
 				$('<form/>', {
@@ -50,8 +50,8 @@
 					method : 'post'
 				}).append($('<input/>', {
 					type : 'hidden',
-					name : 'post_id',
-					value : post_id
+					name : 'postId',
+					value : postId
 				})).append($('<input/>', {
 					type : 'hidden',
 					name : 'zoo_id',
@@ -67,25 +67,25 @@
 		$('.deleteChildPost').click(function(e) {
 			const deleteImageFalg = confirm('この投稿を削除してもよろしいですか？');
 			if (deleteImageFalg) {
-				const post_id = $(this).next().val();
+				const postId = $(this).next().val();
 				const zoo_id = $(this).next().next().val();
-				const parent_id = $(this).next().next().next().val();
+				const parentId = $(this).next().next().next().val();
 				const csrf = $(this).next().next().next().next().val();
 				$('<form/>', {
 					action : '/post/deleteChild',
 					method : 'post'
 				}).append($('<input/>', {
 					type : 'hidden',
-					name : 'post_id',
-					value : post_id
+					name : 'postId',
+					value : postId
 				})).append($('<input/>', {
 					type : 'hidden',
-					name : 'zoo_id',
+					name : 'zooId',
 					value : zoo_id
 				})).append($('<input/>', {
 					type : 'hidden',
-					name : 'parent_id',
-					value : parent_id
+					name : 'parentId',
+					value : parentId
 				})).append($('<input/>', {
 					type : 'hidden',
 					name : '_csrf',
@@ -99,7 +99,7 @@
 			var button = $(this);
 			if (button.hasClass("btn-outline-warning")) {
 				$.getJSON("/post/insertPostFavorite", {
-					post_id : requestParam
+					postId : requestParam
 				}, function(json) {
 					button.removeClass("btn-outline-warning");
 					button.addClass("btn-warning");
@@ -107,7 +107,7 @@
 				});
 			} else {
 				$.getJSON("/post/deletePostFavorite", {
-					post_id : requestParam
+					postId : requestParam
 				}, function(json) {
 					button.removeClass("btn-warning");
 					button.addClass("btn-outline-warning");
@@ -217,11 +217,11 @@
 				<div class="modal-header">
 					<h5 class="modal-title" id="exampleModalCenterTitle">
 						投稿者：<a
-							th:href="@{/user/mypage/{user_id}(user_id=${post.loginUser.user_id})}"><img
-							th:src="${post.loginUser.profileImagePath}" width="40px"
+							th:href="@{/users/{user_id}(user_id=${post.user.user_id})}"><img
+							th:src="${post.user.profileImagePath}" width="40px"
 							height="40px"></a> <a
-							th:href="@{/user/mypage/{user_id}(user_id=${post.loginUser.user_id})}"
-							th:text="${post.loginUser.userName}"> </a>
+							th:href="@{/users/{user_id}(user_id=${post.user.user_id})}"
+							th:text="${post.user.userName}"> </a>
 					</h5>
 					<button type="button" class="close" data-dismiss="modal"
 						aria-label="Close">
@@ -260,12 +260,12 @@
 		</div>
 		<div th:object="${post}" style="margin: 10px; border: solid;">
 			<div style="margin: 10px;">
-				<a th:href="@{/user/mypage/{user_id}(user_id=*{loginUser.user_id})}"><img
-					th:src="*{loginUser.profileImagePath}" width="40px" height="40px"></a>
-				<a th:href="@{/user/mypage/{user_id}(user_id=*{loginUser.user_id})}"
-					th:text="*{loginUser.userName}"> </a> <span
+				<a th:href="@{/users/{user_id}(user_id=*{user.user_id})}"><img
+					th:src="*{user.profileImagePath}" width="40px" height="40px"></a>
+				<a th:href="@{/users/{user_id}(user_id=*{user.user_id})}"
+					th:text="*{user.userName}"> </a> <span
 					th:text="*{displayDiffTime}"></span> <input type="hidden"
-					name="favorite_post_id" th:value="*{post_id}">
+					name="favorite_postId" th:value="*{postId}">
 				<button sec:authorize="!isAuthenticated()" type="button"
 					th:if="*{favoriteFlag == false}"
 					class="btn btn-outline-warning btn-sm postFavoriteRegister"
@@ -281,16 +281,16 @@
 					class="btn btn-warning btn-sm postFavoriteRegister"></button>
 				<button sec:authorize="isAuthenticated()"
 					class="btn btn-danger btn-sm deletePost"
-					th:if="*{loginUser.user_id} == ${#authentication.principal.user_id}"
+					th:if="*{user.user_id} == ${#authentication.principal.user_id}"
 					type="button">この投稿を削除</button>
 				<input sec:authorize="isAuthenticated()"
-					th:if="*{loginUser.user_id} == ${#authentication.principal.user_id}"
-					type="hidden" name="post_id" th:value="*{post_id}"> <input
+					th:if="*{user.user_id} == ${#authentication.principal.user_id}"
+					type="hidden" name="postId" th:value="*{postId}"> <input
 					sec:authorize="isAuthenticated()"
-					th:if="*{loginUser.user_id} == ${#authentication.principal.user_id}"
+					th:if="*{user.user_id} == ${#authentication.principal.user_id}"
 					type="hidden" name="zoo_id" th:value="${post.zoo.zoo_id}">
 				<input sec:authorize="isAuthenticated()"
-					th:if="*{loginUser.user_id} == ${#authentication.principal.user_id}"
+					th:if="*{user.user_id} == ${#authentication.principal.user_id}"
 					type="hidden" th:name="${_csrf.parameterName}"
 					th:value="${_csrf.token}" />
 			</div>
@@ -322,8 +322,10 @@
 			<form sec:authorize="isAuthenticated()"
 				th:action="@{/post/insertChildPost}" method="post"
 				th:object="${postInsertForm}">
-				<input type="hidden" th:field="*{parent_id}"> <input
-					type="hidden" th:field="*{parent_id}">
+				<input type="hidden" th:field="*{parentId}"> <input
+					type="hidden" th:field="*{parentId}">
+					 <input
+					type="hidden" th:field="*{zooId}">
 				<div th:id="content">
 					<textarea name="contents" class="form-control postTextarea"
 						placeholder="この投稿へコメントする" th:errorclass="is-invalid"
@@ -341,12 +343,12 @@
 		<div th:each="childPost : ${post.childrenPost}"
 			th:object="${childPost}" style="margin: 10px; border: solid;">
 			<div style="margin: 10px;">
-				<a th:href="@{/user/mypage/{user_id}(user_id=*{loginUser.user_id})}"><img
-					th:src="*{loginUser.profileImagePath}" width="40px" height="40px"></a>
-				<a th:href="@{/user/mypage/{user_id}(user_id=*{loginUser.user_id})}"
-					th:text="*{loginUser.userName}"> </a> <span
+				<a th:href="@{/users/{user_id}(user_id=*{user.user_id})}"><img
+					th:src="*{user.profileImagePath}" width="40px" height="40px"></a>
+				<a th:href="@{/users/{user_id}(user_id=*{user.user_id})}"
+					th:text="*{user.userName}"> </a> <span
 					th:text="*{displayDiffTime}"></span> <input type="hidden"
-					name="favorite_post_id" th:value="*{post_id}">
+					name="favorite_postId" th:value="*{postId}">
 				<button sec:authorize="!isAuthenticated()" type="button"
 					th:if="*{favoriteFlag == false}"
 					class="btn btn-outline-warning btn-sm postFavoriteRegister"
@@ -362,19 +364,19 @@
 					class="btn btn-warning btn-sm postFavoriteRegister"></button>
 				<button sec:authorize="isAuthenticated()"
 					class="btn btn-danger btn-sm deleteChildPost"
-					th:if="*{loginUser.user_id} == ${#authentication.principal.user_id}"
+					th:if="*{user.user_id} == ${#authentication.principal.user_id}"
 					type="button">この投稿を削除</button>
 				<input sec:authorize="isAuthenticated()"
-					th:if="*{loginUser.user_id} == ${#authentication.principal.user_id}"
-					type="hidden" name="post_id" th:value="*{post_id}"> <input
+					th:if="*{user.user_id} == ${#authentication.principal.user_id}"
+					type="hidden" name="postId" th:value="*{postId}"> <input
 					sec:authorize="isAuthenticated()"
-					th:if="*{loginUser.user_id} == ${#authentication.principal.user_id}"
+					th:if="*{user.user_id} == ${#authentication.principal.user_id}"
 					type="hidden" name="zoo_id" th:value="${post.zoo.zoo_id}">
 				<input sec:authorize="isAuthenticated()"
-					th:if="*{loginUser.user_id} == ${#authentication.principal.user_id}"
-					type="hidden" name="parent_id" th:value="${post.post_id}">
+					th:if="*{user.user_id} == ${#authentication.principal.user_id}"
+					type="hidden" name="parentId" th:value="${post.postId}">
 				<input sec:authorize="isAuthenticated()"
-					th:if="*{loginUser.user_id} == ${#authentication.principal.user_id}"
+					th:if="*{user.user_id} == ${#authentication.principal.user_id}"
 					type="hidden" th:name="${_csrf.parameterName}"
 					th:value="${_csrf.token}" />
 			</div>
