投稿画面を改修

--- a/src/main/resources/templates/post/postDetail.html
+++ b/src/main/resources/templates/post/postDetail.html
@@ -54,7 +54,7 @@
 					value : postId
 				})).append($('<input/>', {
 					type : 'hidden',
-					name : 'zoo_id',
+					name : 'zooId',
 					value : zoo_id
 				})).append($('<input/>', {
 					type : 'hidden',
