--- a/src/main/resources/templates/description.html
+++ b/src/main/resources/templates/description.html
@@ -6,26 +6,17 @@
 <meta charset="utf-8">
 <meta name="viewport"
 	content="width=device-width,initial-scale=1,maximum-scale=1">
-
 <title>koalaMania</title>
-
-<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-<link rel="canonical"
-	href="https://getbootstrap.jp/docs/5.0/examples/starter-template/">
 <!-- Bootstrap core CSS -->
-<link
-	href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css
-	rel="stylesheet"
-	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-	crossorigin="anonymous">
-
+<link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
 <!-- Custom styles for this template -->
 <link href="/css/searchResult.css" rel="stylesheet">
 <title th:text="${title}"></title>
 </head>
 
 <body>
+<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 	<div th:replace="~{block/header_boot::headerA_boot}"></div>
 	<p class="text-break mt-5 pt-3">
 		
