--- a/src/main/resources/templates/familytree.html
+++ b/src/main/resources/templates/familytree.html
@@ -5,20 +5,11 @@
 <head>
 <meta charset="utf-8">
 <!-- <meta name="viewport"
-	content="width=device-width,initial-scale=1,maximum-scale=1">
-ハンバーガーメニューにすると家系図に影響が出る
- -->
+	content="width=device-width,initial-scale=1,maximum-scale=1"> -->
+<!-- ハンバーガーメニューにすると家系図に影響が出る -->
 
-<link
-	href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css
-	rel="stylesheet"
-	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-	crossorigin="anonymous">
 
-<link rel="canonical"
-	href="https://getbootstrap.jp/docs/5.0/examples/starter-template/">
-<!-- Custom styles for this template -->
-<link href="/css/searchResult.css" rel="stylesheet">
+ <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
 <meta charset="utf-8">
 <link href="/css/familytree.css" rel="stylesheet">
 <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
