--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,28 +6,17 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>koalaMania</title>
-
-<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-<link rel="canonical"
-	href="https://getbootstrap.jp/docs/5.0/examples/starter-template/">
-<!-- Bootstrap core CSS -->
-<link
-	href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css
-	rel="stylesheet"
-	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-	crossorigin="anonymous">
-
+<link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
 </head>
 
 <body>
+	<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+	<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 	<div th:replace="~{block/header_boot::headerA_boot}"></div>
+	<p class="mt-5 pt-3"></p>
 	<div class="container">
-		<br> <br> <br> <br>
-		<div class="row align-items-center text-center">
-
-			<div class="d-flex flex-column bd-highlight mb-3">
-				<div class="p-2 bd-highlight">
+		<div class="row align-items-center justify-content-center">
+				<div class="mt-5 p-2 bd-highlight">
 					<a th:href="@{/oauth/twitter/auth}">
 						<button class="btn btn-info mx-2" type="submit">Twitterアカウントでログイン</button>
 					</a>
@@ -38,7 +27,6 @@
 <!--				</div>-->
 			</div>
 		</div>
-	</div>
 
 
 
