--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -19,7 +19,7 @@
     <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 <div th:replace="~{block/header_boot::headerA_boot}"></div>
 <div class="searchResult-container">
-    <p class="mt-5"></p>
+    <p class="mt-5 pt-3"></p>
     <form class="p-4 container-fluid" method="get"
           th:action="@{/filter}" th:object="${animalFilterForm}">
         <div class="row no-gutters">
