--- a/src/main/resources/templates/zoo/detail.html
+++ b/src/main/resources/templates/zoo/detail.html
@@ -8,19 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
 <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-<link rel="canonical"
-	href="https://getbootstrap.jp/docs/5.0/examples/starter-template/">
-<!-- Bootstrap core CSS -->
-<link
-	href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css
-	rel="stylesheet"
-	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-	crossorigin="anonymous">
-
-
-
-<!-- Custom styles for this template -->
-<link href="/css/starter-template.css" rel="stylesheet"></link>
+<link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
 <link href="/css/postgrad.css" rel="stylesheet">
 <script type="text/javascript">
 	$(function() {
@@ -86,10 +74,12 @@
 
 <body>
 	<div th:replace="~{block/header_boot::headerA_boot}"></div>
+	<p class="mt-5 pt-3"></p>
 	<div th:object="${zoo}">
 		<button class="btn btn-primary btn-sm" type="button"
 			th:onclick="'location.href = \'' +@{/post/{zoo_id}(zoo_id=*{zoo_id})} + '\''">投稿する</button>
-		<table class="table table-hover table-responsive">
+		<div class="table-responsive">
+		<table class="table table-hover">
 			<tr>
 				<th class="cell_title">名前</th>
 				<td th:text="*{zoo_name}"></td>
@@ -177,6 +167,7 @@
 					</div></td>
 			</tr>
 		</table>
+	</div>
 	</div>
 </body>
 </html>
