navbarの余分なpadding解除

--- a/src/main/resources/templates/block/header_boot.html
+++ b/src/main/resources/templates/block/header_boot.html
@@ -13,11 +13,9 @@
 	<v-app>
 		<v-main>
 			<v-container>
-				<header>
+				<header class="container-fluid">
 					<nav class="navbar navbar-expand-xs navbar-dark bg-dark fixed-top">
-						<div class="container-fluid">
-
-							<button class="navbar-toggler" type="button" data-toggle="collapse"
+							<button class="navbar-toggler mr-auto" type="button" data-toggle="collapse"
 								data-target="#navbarsExampleDefault"
 								aria-controls="navbarsExampleDefault" aria-expanded="false"
 								aria-label="Toggle navigation">
@@ -75,8 +73,6 @@
 										</div>
 									</li>
 								</ul>
-							</div>
-						</div>
 					</nav>
 				</header>
 			</v-container>
