starter-template.cssは使用しないように変更

--- a/src/main/resources/templates/post/postInsert.html
+++ b/src/main/resources/templates/post/postInsert.html
@@ -16,7 +16,6 @@
 	rel="stylesheet"
 	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
 	crossorigin="anonymous">
-<link href="/css/starter-template.css" rel="stylesheet">
 <link href="/css/calender.css" rel="stylesheet">
 <link href="/css/postForm.css" rel="stylesheet">
 <script type="text/javascript">
@@ -270,7 +269,7 @@
 	    </div>
 	  </div>
 	</div>
-	
+	<p class="mt-5 pt-3"></p>
 	<div class="container">
 	<form th:action="@{/post/insertParentPost}" method="post"
 			enctype="multipart/form-data" th:object="${postInsertForm}">
