--- a/src/main/resources/templates/users/edit.html
+++ b/src/main/resources/templates/users/edit.html
@@ -15,9 +15,6 @@
 
 <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
 
-<!-- Custom styles for this template -->
-<link href="/css/starter-template.css" rel="stylesheet">
-
 <script type="text/javascript">
 $(function() {
 		$('#submitButton').click(function(e) {
@@ -34,6 +31,7 @@ $(function() {
 
 <body>
 	<div th:replace="~{block/header_boot::headerA_boot}"></div>
+	<p class="mt-5 pt-3"></p>
 	<form th:action="@{/user/edit}" method="post"
 			enctype="multipart/form-data" th:object="${userForm}">
 			<input type="hidden" th:field="*{user_id}">
