common.css(日本語フォント指定)の参照を追加

--- a/src/main/resources/templates/description.html
+++ b/src/main/resources/templates/description.html
@@ -10,6 +10,7 @@
 <!-- Bootstrap core CSS -->
 <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
 <!-- Custom styles for this template -->
+<link href="/css/common.css" rel="stylesheet">
 <link href="/css/searchResult.css" rel="stylesheet">
 <title th:text="${title}"></title>
 </head>
