--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
 	<link href="/css/background.css" rel="stylesheet">
 	<link href="/css/index.css" rel="stylesheet">
+	<link href="/css/common.css" rel="stylesheet">
 </head>
 
 <body style="visibility:hidden" onLoad="document.body.style.visibility='visible'">
