--- a/src/main/resources/templates/post/postInsert.html
+++ b/src/main/resources/templates/post/postInsert.html
@@ -16,6 +16,7 @@
 	rel="stylesheet"
 	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
 	crossorigin="anonymous">
+<link href="/css/common.css" rel="stylesheet">
 <link href="/css/calender.css" rel="stylesheet">
 <link href="/css/postForm.css" rel="stylesheet">
 <script type="text/javascript">
