--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -7,6 +7,7 @@
     <meta name="viewport"
           content="width=device-width,initial-scale=1,maximum-scale=1">
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
+    <link href="/css/common.css" rel="stylesheet">
     <link href="/css/searchResult.css" rel="stylesheet">
     <title th:text="${title}">検索画面</title>
     <script type="text/javascript">
