--- a/src/main/resources/templates/users/edit.html
+++ b/src/main/resources/templates/users/edit.html
@@ -12,9 +12,8 @@
 	rel="stylesheet"
 	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
 	crossorigin="anonymous">
-
+<link href="/css/common.css" rel="stylesheet">
 <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-
 <script type="text/javascript">
 $(function() {
 		$('#submitButton').click(function(e) {
