--- a/src/main/resources/templates/users/mypage.html
+++ b/src/main/resources/templates/users/mypage.html
@@ -26,6 +26,7 @@
 
     <!-- Custom CSS-->
     <link href="/css/mypage.css" rel="stylesheet">
+    <link href="/css/common.css" rel="stylesheet">
 
     <!-- Vuetify3 -->
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css" rel="stylesheet">
