--- a/src/main/resources/templates/familytree.html
+++ b/src/main/resources/templates/familytree.html
@@ -7,10 +7,8 @@
 <!-- <meta name="viewport"
 	content="width=device-width,initial-scale=1,maximum-scale=1"> -->
 <!-- ハンバーガーメニューにすると家系図に影響が出る -->
-
-
- <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
-<meta charset="utf-8">
+<link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
+<link href="/css/common.css" rel="stylesheet">
 <link href="/css/familytree.css" rel="stylesheet">
 <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
