--- a/src/main/resources/templates/insert.html
+++ b/src/main/resources/templates/insert.html
@@ -10,6 +10,7 @@
 <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
 <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
+<link href="/css/common.css" rel="stylesheet">
 <title th:text="${title}">Insert title here</title>
 <script type="text/javascript">
 
