--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,6 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>koalaMania</title>
 <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
+<link href="/css/common.css" rel="stylesheet">
 </head>
 
 <body>
