--- a/src/main/resources/templates/terms.html
+++ b/src/main/resources/templates/terms.html
@@ -3,6 +3,7 @@
     xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
+    <link href="/css/common.css" rel="stylesheet">
     <title th:text="利用規約"></title>
 </head>
 
