--- a/src/main/resources/templates/post/postInsert.html
+++ b/src/main/resources/templates/post/postInsert.html
@@ -10,12 +10,8 @@
 <script src="/js/datepicker-ja.js"></script>
 <link href="/css/jquery-ui.min.css" rel="stylesheet">
 <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+<link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
 <script src="/js/popper.min.js"></script>
-<link
-	href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css
-	rel="stylesheet"
-	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-	crossorigin="anonymous">
 <link href="/css/calender.css" rel="stylesheet">
 <link href="/css/postForm.css" rel="stylesheet">
 <script type="text/javascript">
