--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -11,13 +11,9 @@
 <!--<script th:src="@{/webjars/jquery/jquery.min.js}"></script>-->
 <!--<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>-->
 <!--<link rel="canonical"-->
-<!--	href="https://getbootstrap.jp/docs/5.0/examples/starter-template/">-->
+<!--	href="https://getbootstrap.jp/docs/5.0/examples/starter-template/">
 <!--&lt;!&ndash; Bootstrap core CSS &ndash;&gt;-->
-<!--<link-->
-<!--	href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css-->
-<!--	rel="stylesheet"-->
-<!--	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"-->
-<!--	crossorigin="anonymous">-->
+<link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">-->
 
 
 <!--</head>-->
