ページネーションで現在のページにactiveクラスを付与

--- a/src/main/resources/static/css/pagenation.css
+++ b/src/main/resources/static/css/pagenation.css
@@ -41,8 +41,8 @@
     text-align: center;
 }
 
-.page_counter li.current {
-    background: #606060;
+.page_counter li.active {
+    background: #24936e;
     color: #fff;
 }
 
