--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -136,7 +136,7 @@
             </div>
         </div>
         <div class="pagination">
-            <p class="total_counter"></p>
+            <!-- <p class="total_counter"></p>-->
             <p class="prev">前へ</p>
             <ul class="page_counter"></ul>
             <p class="next">次へ</p>
